--- a/www/wp-content/themes/yana/css/_masthead.scss
+++ b/www/wp-content/themes/yana/css/_masthead.scss
@@ -64,6 +64,8 @@ $vignette-height: 480px;
     z-index: 6;
     max-width: em(504px);
     height: em(430px - 48px);
+
+
   }
 
   .text {
@@ -72,23 +74,34 @@ $vignette-height: 480px;
   }
 }
 
+@include breakpoint(tablet) {
+  .masthead {
+    .text-wrap {
+      width: 60%;
+    }
+  }
+}
+
 @include breakpoint(mobile) {
   .masthead {
     height: auto;
     .content {
       height: auto;
-      font-size: 12px;
+      //font-size: 12px;
     }
 
     .text-wrap {
+      width: auto;
       max-width: em(408px);
       height: auto;
-      min-height: em(312px);
+      min-height: em(144px);
     }
 
     .masthead-title {
       font-size: em(48px);
     }
+
+    p { display: none; }
 
     .home & .masthead-title {
       font-size: em(60px);
