--- a/www/wp-content/themes/yana/css/_news.scss
+++ b/www/wp-content/themes/yana/css/_news.scss
@@ -34,16 +34,37 @@
 
 .news-toc {
   margin: 0 0 em(30px);
-  border-top: 1px solid #F0F0F0;
+
   .post {
     margin: 0;
     padding-top: em(30px);
     padding-bottom: em(30px);
     border: 1px solid #F0F0F0;
     border-width: 0 0 1px;
+
+    .home & { margin-bottom: em(30px); padding-top: 0; }
   }
 
   .more-posts {
     margin: em(30px) 0;
+  }
+}
+
+@include breakpoint(mobile) {
+  .post.category-thanks {
+    margin: 0;
+    padding: em(18px) 0;
+
+    &:hover, &:focus { background-color: #fff; }
+
+    .icon {
+      width: 48px;
+    }
+
+    p {
+      margin: em(18px,18px) 0;
+      @include sans-bold(em(16px), (32/18));
+      color: $lightgrey;
+    }
   }
 }
