Mobile nav implementation

--- a/www/wp-content/themes/yana/css/_globals.scss
+++ b/www/wp-content/themes/yana/css/_globals.scss
@@ -19,6 +19,8 @@ $sidebar-gutter: 54px;
 
 $tablet-sidebar-width: 252px;
 
+$mobile-nav-w: 222px;
+
 
 // used for calculating ems
 $base-font-size: 16px;
