--- a/www/wp-content/themes/yana/css/_header.scss
+++ b/www/wp-content/themes/yana/css/_header.scss
@@ -285,19 +285,31 @@ $logo-gutter: 30px;
 }
 
 @include breakpoint(mobile) {
-
-  $mobile-nav-w: 216px;
-  $mobile-nav-padding: 12px;
-
   .site-header {
+    height: 88px;
     .logo {
-      float: none;
       width: ($logo-width / 1.5);
       height: ($logo-height / 1.5);
       a {
+        width: 100%;
+        height: 100%;
         background-size: ($logo-width / 1.5) ($logo-height / 1.5);
         background-position: 0 0;
       }
+    }
+
+    .nav-toggle {
+      display: block;
+      float: right;
+      width: em(24px);
+      height: em(24px);
+      margin-top: em(8px);
+      font-size: em(24px);
+      line-height: 1;
+      text-align: center;
+      color: #BBCAD2;
+
+      a:focus { outline: 0; }
     }
   }
 
@@ -305,88 +317,98 @@ $logo-gutter: 30px;
     position: fixed;
     overflow: scroll;
     top: 0;
-    background: #eaeaea;
+    background: #FAFAFA;
 
     width: $mobile-nav-w;
-    padding: $mobile-nav-padding;
+    padding: 0;
     height: 100%;
     z-index: 99999;
-    right: ($mobile-nav-w + ($mobile-nav-padding * 2)) * -1;
+    right: $mobile-nav-w * -1;
     transition: 200ms right ease-out;
   }
 
-  .primary-nav {
+  .primary-nav, .secondary-nav {
+    position: relative;
     margin-top: 0;
+    margin: 0;
+    padding: 0;
+    width: auto;
+    height: auto;
 
-    ul {
-      text-align: left;
-    }
 
-    ul:after { display: none; }
-
-    li {
-      display: block;
-    }
-
-    a { display: inline-block; }
-
-    .sub-menu {
-      display: block;
+    div, ul, li, .secondary-content, .links, .sub-menu {
       position: relative;
+      display: block;
       width: auto;
       height: auto;
-      left: 0;
-      top: 0;
+      top: auto;
+      left: auto;
       margin: 0;
       padding: 0;
       border: 0;
-      background: transparent;
-
-      &:before, &:after { display: none; }
-
-      a { display: inline-block; }
-    }
-  }
-
-  .secondary-nav {
-    position: relative;
-    height: auto;
-    top: auto;
-
-    div, li {
-      display: block;
-    }
-
-    .secondary-content {
-      padding-left: 0;
       text-align: left;
     }
 
-    a {
-      display: inline-block;
-      padding: 0;
-    }
+    ul:before, ul:after { display: none; }
 
     .badge {
       display: none;
+    }
+
+    li {
+      border-bottom: 1px solid #EDEEEF;
+    }
+
+
+
+    li:nth-child(even) a, li:nth-child(odd) a {
+      display: block;
+      margin: 0;
+      padding: 18px 30px;
+      @include sans-condensed(20px, (24/20));
+      text-transform: uppercase;
+      color: #51BDB5;
+
+      &:hover, &:focus {
+        color: #51BDB5;
+      }
+    }
+  }
+
+  .primary-nav {
+    .sub-menu {
+      display: block;
+      border-radius: 0;
+      background: #fff;
+
+      li {
+        border: 0;
+      }
+
+      li:nth-child(even) a, li:nth-child(odd) a {
+
+        font-size: 16px;
+        line-height: (20/16);
+        text-transform: none;
+        color: #B1B1B1;
+      }
     }
   }
 
   .show-nav {
     .site-nav {
       right: 0;
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.25)
     }
   }
 }
 
-.page {
+#page {
   position: relative;
   left: 0;
   transition: left 250ms ease-out;
 }
 
-.show-nav .page {
-
-  left: -240px;
-
+.show-nav #page {
+  left: ($mobile-nav-w * -1);
 }
