--- a/www/wp-content/themes/yana/css/_icons.scss
+++ b/www/wp-content/themes/yana/css/_icons.scss
@@ -9,26 +9,7 @@
 	font-style: normal;
 }
 
-/* Use the following CSS code if you want to use data attributes for inserting your icons */
-[data-icon]:before {
-	font-family: 'icomoon';
-	content: attr(data-icon);
-	speak: none;
-	font-weight: normal;
-	font-variant: normal;
-	text-transform: none;
-	line-height: 1;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-}
-
-/* Use the following CSS code if you want to have a class per icon */
-/*
-Instead of a list of all class selectors,
-you can use the generic selector below, but it's slower:
-[class*="icon-"] {
-*/
-.icon-instagram, .icon-menu, .icon-close, .icon-youtube, .icon-vimeo, .icon-facebook, .icon-twitter {
+[class^="icon-"], [class*=" icon-"] {
 	font-family: 'icomoon';
 	speak: none;
 	font-style: normal;
@@ -36,13 +17,17 @@ you can use the generic selector below, but it's slower:
 	font-variant: normal;
 	text-transform: none;
 	line-height: 1;
+
+	/* Better Font Rendering =========== */
 	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+.icon-nav:before {
+	content: "\e600";
 }
 .icon-instagram:before {
 	content: "\e007";
-}
-.icon-menu:before {
-	content: "\e004";
 }
 .icon-close:before {
 	content: "\e005";
