--- a/www/wp-content/themes/yana/style.css
+++ b/www/wp-content/themes/yana/style.css
@@ -66,20 +66,11 @@ img { vertical-align: middle; }
 
 @font-face { font-family: 'icomoon'; src: url("fonts/icomoon.eot"); src: url("fonts/icomoon.eot?#iefix") format("embedded-opentype"), url("fonts/icomoon.woff") format("woff"), url("fonts/icomoon.ttf") format("truetype"), url("fonts/icomoon.svg#icomoon") format("svg"); font-weight: normal; font-style: normal; }
 
-/* Use the following CSS code if you want to use data attributes for inserting your icons */
-[data-icon]:before { font-family: 'icomoon'; content: attr(data-icon); speak: none; font-weight: normal; font-variant: normal; text-transform: none; line-height: 1; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
+[class^="icon-"], [class*=" icon-"] { font-family: 'icomoon'; speak: none; font-style: normal; font-weight: normal; font-variant: normal; text-transform: none; line-height: 1; /* Better Font Rendering =========== */ -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
 
-/* Use the following CSS code if you want to have a class per icon */
-/*
-Instead of a list of all class selectors,
-you can use the generic selector below, but it's slower:
-[class*="icon-"] {
-*/
-.icon-instagram, .icon-menu, .icon-close, .icon-youtube, .icon-vimeo, .icon-facebook, .icon-twitter { font-family: 'icomoon'; speak: none; font-style: normal; font-weight: normal; font-variant: normal; text-transform: none; line-height: 1; -webkit-font-smoothing: antialiased; }
+.icon-nav:before { content: "\e600"; }
 
 .icon-instagram:before { content: "\e007"; }
-
-.icon-menu:before { content: "\e004"; }
 
 .icon-close:before { content: "\e005"; }
 
@@ -253,26 +244,26 @@ blockquote + p { margin-top: 2.8em; }
 .secondary-nav .current a { color: #2494a2; }
 
 @media all and (max-width: 980px) { .primary-nav .sub-menu { font-size: 16px; } }
-@media all and (max-width: 760px) { .site-header .logo { float: none; width: 204px; height: 56px; }
-  .site-header .logo a { background-size: 204px 56px; background-position: 0 0; }
-  .site-nav { position: fixed; overflow: scroll; top: 0; background: #eaeaea; width: 216px; padding: 12px; height: 100%; z-index: 99999; right: -240px; transition: 200ms right ease-out; }
-  .primary-nav { margin-top: 0; }
-  .primary-nav ul { text-align: left; }
-  .primary-nav ul:after { display: none; }
-  .primary-nav li { display: block; }
-  .primary-nav a { display: inline-block; }
-  .primary-nav .sub-menu { display: block; position: relative; width: auto; height: auto; left: 0; top: 0; margin: 0; padding: 0; border: 0; background: transparent; }
-  .primary-nav .sub-menu:before, .primary-nav .sub-menu:after { display: none; }
-  .primary-nav .sub-menu a { display: inline-block; }
-  .secondary-nav { position: relative; height: auto; top: auto; }
-  .secondary-nav div, .secondary-nav li { display: block; }
-  .secondary-nav .secondary-content { padding-left: 0; text-align: left; }
-  .secondary-nav a { display: inline-block; padding: 0; }
-  .secondary-nav .badge { display: none; }
-  .show-nav .site-nav { right: 0; } }
-.page { position: relative; left: 0; transition: left 250ms ease-out; }
+@media all and (max-width: 760px) { .site-header { height: 88px; }
+  .site-header .logo { width: 204px; height: 56px; }
+  .site-header .logo a { width: 100%; height: 100%; background-size: 204px 56px; background-position: 0 0; }
+  .site-header .nav-toggle { display: block; float: right; width: 1.5em; height: 1.5em; margin-top: 0.5em; font-size: 1.5em; line-height: 1; text-align: center; color: #BBCAD2; }
+  .site-header .nav-toggle a:focus { outline: 0; }
+  .site-nav { position: fixed; overflow: scroll; top: 0; background: #FAFAFA; width: 222px; padding: 0; height: 100%; z-index: 99999; right: -222px; transition: 200ms right ease-out; }
+  .primary-nav, .secondary-nav { position: relative; margin-top: 0; margin: 0; padding: 0; width: auto; height: auto; }
+  .primary-nav div, .primary-nav ul, .primary-nav li, .primary-nav .secondary-content, .primary-nav .links, .primary-nav .sub-menu, .secondary-nav div, .secondary-nav ul, .secondary-nav li, .secondary-nav .secondary-content, .secondary-nav .links, .secondary-nav .sub-menu { position: relative; display: block; width: auto; height: auto; top: auto; left: auto; margin: 0; padding: 0; border: 0; text-align: left; }
+  .primary-nav ul:before, .primary-nav ul:after, .secondary-nav ul:before, .secondary-nav ul:after { display: none; }
+  .primary-nav .badge, .secondary-nav .badge { display: none; }
+  .primary-nav li, .secondary-nav li { border-bottom: 1px solid #EDEEEF; }
+  .primary-nav li:nth-child(even) a, .primary-nav li:nth-child(odd) a, .secondary-nav li:nth-child(even) a, .secondary-nav li:nth-child(odd) a { display: block; margin: 0; padding: 18px 30px; font: normal 20px/1.2 "Neue Helvetica W01", sans-serif; font-weight: 500; text-transform: uppercase; color: #51BDB5; }
+  .primary-nav li:nth-child(even) a:hover, .primary-nav li:nth-child(even) a:focus, .primary-nav li:nth-child(odd) a:hover, .primary-nav li:nth-child(odd) a:focus, .secondary-nav li:nth-child(even) a:hover, .secondary-nav li:nth-child(even) a:focus, .secondary-nav li:nth-child(odd) a:hover, .secondary-nav li:nth-child(odd) a:focus { color: #51BDB5; }
+  .primary-nav .sub-menu { display: block; border-radius: 0; background: #fff; }
+  .primary-nav .sub-menu li { border: 0; }
+  .primary-nav .sub-menu li:nth-child(even) a, .primary-nav .sub-menu li:nth-child(odd) a { font-size: 16px; line-height: 1.25; text-transform: none; color: #B1B1B1; }
+  .show-nav .site-nav { right: 0; box-shadow: 0 0 5px rgba(0, 0, 0, 0.25); } }
+#page { position: relative; left: 0; transition: left 250ms ease-out; }
 
-.show-nav .page { left: -240px; }
+.show-nav #page { left: -222px; }
 
 .masthead { position: relative; height: 25.5em; padding-top: 0.75em; padding-bottom: 0.75em; background-position: 50% 50%; background-repeat: no-repeat; background-size: cover; }
 .masthead .content { position: relative; padding-top: 0; padding-bottom: 0; }
