Hide nav toggle on desktop sizes

--- a/www/wp-content/themes/yana/css/_header.scss
+++ b/www/wp-content/themes/yana/css/_header.scss
@@ -31,6 +31,10 @@ $logo-gutter: 30px;
     margin-left: ($sidebar-width + $sidebar-gutter) * -1;
   }
 
+  .nav-toggle {
+    display: none;
+  }
+
 
   @include breakpoint(tablet) {
     font-size: 13px; // TODO: ugly!
