--- a/www/wp-content/themes/yana/style.css
+++ b/www/wp-content/themes/yana/style.css
@@ -99,6 +99,8 @@ body { margin: 0; font: normal 16px/2 "Neue Helvetica W01", sans-serif; font-wei
 a { color: #51bdb5; text-decoration: none; transition: 100ms color ease-out; }
 a:hover, a:focus { color: #358c86; }
 
+iframe { display: block; width: 100%; margin: 30px 0; }
+
 img { display: block; width: auto; height: auto; max-width: 100%; line-height: 1; }
 
 p { margin: 1.6em 0; font-size: 0.9375em; line-height: 1.6; }
