--- a/www/wp-content/themes/yana/style.css
+++ b/www/wp-content/themes/yana/style.css
@@ -144,7 +144,7 @@ blockquote + p { margin-top: 2.8em; }
 
 .embed { margin: 1.875em 0; }
 .embed .inner { width: 100%; position: relative; height: 0; padding-bottom: 56.25%; }
-.embed iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+.embed iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; margin: 0; }
 
 .enews label { display: block; }
 .enews .controls { width: 100%; }
