First pass of galleries
Add flexslider
Make sure jQuery plugins load after jQuery

--- a/www/wp-content/themes/yana/css/site.scss
+++ b/www/wp-content/themes/yana/css/site.scss
@@ -11,6 +11,8 @@ Author URI: http://dialect.ca/
 @import "typography";
 @import "widgets";
 
+@import "flexslider";
+
 @import "header";
 @import "masthead";
 @import "body";
