--- a/www/wp-content/themes/yana/css/_widgets.scss
+++ b/www/wp-content/themes/yana/css/_widgets.scss
@@ -46,6 +46,35 @@
 }
 
 ///////////////////////////
+// Embedded galleries
+///////////////////////////
+
+.gallery-wrapper {
+
+}
+
+
+.flex-viewport {
+  height: em(400px);
+}
+
+.gallery {
+  clear: both;
+  width: 100%;
+  height: em(400px);
+  margin: em(30px) 0;
+
+  img {
+    display: block;
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: em(350px);
+    margin: 0 auto;
+  }
+}
+
+///////////////////////////
 // Embedded videos
 ///////////////////////////
 .embed {
