--- a/www/wp-content/themes/yana/css/site.scss
+++ b/www/wp-content/themes/yana/css/site.scss
@@ -20,6 +20,7 @@ Author URI: http://dialect.ca/
 @import "homepage";
 @import "news";
 @import "events";
+@import "stories";
 @import "footer";
 
 @import "high-contrast";
