--- a/www/wp-content/themes/yana/css/_news.scss
+++ b/www/wp-content/themes/yana/css/_news.scss
@@ -25,6 +25,11 @@
     margin: em(18px,18px) 0;
     @include sans-bold(em(18px), (32/18));
     color: $lightgrey;
+    img {
+      clear: both;
+      float: none;
+      width: 100%;
+    }
   }
 
   &:hover, &:focus {
