--- a/www/wp-content/themes/yana/style.css
+++ b/www/wp-content/themes/yana/style.css
@@ -421,7 +421,7 @@ html[xmlns] .slides { display: block; }
 .post.category-thanks { margin: 1.875em 0; padding: 1.875em 3.375em; border: 1px solid #F0F0F0; border-width: 1px 0; transition: 150ms background ease-out; }
 .post.category-thanks .icon { display: block; float: left; margin: 1.125em 1.125em 0 0; }
 .post.category-thanks p { margin: 1em 0; font: normal 1.125em/1.77778 "Neue Helvetica W01", sans-serif; font-weight: 600; color: #b1b1b1; }
-.post.category-thanks p img { clear: both; float: none; width: 100%; }
+.post.category-thanks p img { float: none; width: 100%; }
 .post.category-thanks:hover, .post.category-thanks:focus { background: #FAFAFA; }
 
 .news-toc { margin: 0 0 1.875em; }
