--- a/www/wp-content/themes/yana/css/_header.scss
+++ b/www/wp-content/themes/yana/css/_header.scss
@@ -84,13 +84,12 @@ $logo-gutter: 30px;
       width: $logo-width;
       height: $logo-height;
       @extend %image-replacement;
-      background: transparent url("img/header-logo.png") 50% 0 no-repeat;
+      background: transparent url("img/header-logo.svg") 50% 0 no-repeat;
       background-size: $logo-width $logo-height;
 
-      //.no-svg & {
-        // TODO: this looks terrible
-      //  background-image: url("img/header-logo.png");
-      //}
+      .no-svg & {
+        background-image: url("img/header-logo.png");
+      }
     }
   }
 }
