--- a/www/wp-content/themes/yana/css/_typography.scss
+++ b/www/wp-content/themes/yana/css/_typography.scss
@@ -169,6 +169,19 @@ blockquote + p {
 .skip-link { @extend %visuallyhidden; }
 
 
+.callout {
+  border-radius: 1em;
+  margin: 0 0 em(24px);
+  padding: em(12px) em(48px);
+  color: #fff;
+  background: #51BDB5;
+
+  p {
+    margin: em(12px,18px) 0;
+    @include sans-bold(em(18px,16px), (28/18));
+  }
+}
+
 // here's a media query defining a breakpoint
 // set the font-size for the containers first, then manually
 // set the styles
