--- a/www/wp-content/themes/yana/fonts/ie7.css
+++ b/www/wp-content/themes/yana/fonts/ie7.css
@@ -22,3 +22,9 @@
 .icon-nav {
 	*zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe600;');
 }
+.icon-arrow-right {
+	*zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe601;');
+}
+.icon-arrow-left {
+	*zoom: expression(this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe602;');
+}
