Switch from Grunt to Guard

--- a/www/wp-content/themes/yana/css/style.scss
+++ b/www/wp-content/themes/yana/css/style.scss
@@ -1,9 +1,10 @@
-/*
+/*!
 Theme Name: YANA Comox Valley
 Theme URI: http://www.yanacomoxvalley.com/
 Author: Dialect
 Author URI: http://dialect.ca/
 */
+
 
 @import "reset";
 @import "globals";
